--- a/TP n°3 - Le positionnement/CSS TP3/exo5 - récapitulatif .html
+++ b/TP n°3 - Le positionnement/CSS TP3/exo5 - récapitulatif .html
@@ -15,7 +15,7 @@
                 <li><a href="./exo2 (float).html" title="Redirection exercice 2">Exercice 2</a></li>
                 <li><a href="./exo3 - relative absolute.html" title="Redirection vers l'exercice n°3">Exercice 3</a></li>
                 <li><a href="./drapeaux.html" title="Redirection vers l'exercice sur les drapeaux">Drapeaux</a></li>
-                <li><a href="#" title="Page actuelle">Exercice 5</a></li>
+                <li><a href="#" title="Page actuelle" class="active">Exercice 5</a></li>
             </ul>
         </nav>
     </header>
